Fixed alignment issue, added more profile photos

--- a/themeDef.css
+++ b/themeDef.css
@@ -145,21 +145,15 @@
 	}
 
 	#carousel{
-		align-items: center;
+		margin: auto;
 		width: 80%;
 		height: 100%;
-		position:relative;
 	}
 
-	.carousel-control-prev{
-		left: 15%;
-    margin-left: 15%;
+	.carousel-inner img {
+	  margin: auto;
 	}
 
-	.carousel-control-next{
-		right: 15%;
-    margin-right: 15%;
-	}
 
 	body{
 		background-image: url(images/backgroundedit2.jpg);
@@ -235,7 +229,7 @@
 
 	.teamContainer
 	{
-		
+		margin-left: 100px;
 	}
 
 }
